// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelEdit > should allow local overrides 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-3"
  >
    <div>
      Foo
    </div>
    <div>
      Bar
    </div>
    <div>
      Baz
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelEdit > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelEdit > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
